Created matrices for DLX algorithm